@@ -1,5 +1,5 @@
 #!/bin/sh
 
 make distclean
-./configure --host=i386-mingw32 CFLAGS="-Wall -W -O2"
+./configure --host=i386-mingw32 CPPFLAGS="-Wall -W -O2"
 make
